--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,4 +16,4 @@ spring.datasource.password=1234
 mybatis.mapper-locations=mybatis-mapper/**/*.xml
 
 #mapper 로그레벨 설정
-loggin.level.com.moohee.mybatis.dao=trace
+logging.level.com.moohee.mybatis.dao=trace
